test/Sema/allowable-client-import.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/binary)
// RUN: %empty-directory(%t/textual)
// RUN: %empty-directory(%t/module-cache)
// RUN: %target-language-frontend -emit-module -emit-module-path %t/binary/Foo.codemodule -parse-as-library %s -enable-library-evolution -allowable-client Bar -allowable-client FooBar -module-name Foo -DFOO -emit-module-interface-path %t/textual/Foo.codeinterface

// RUN: %target-language-frontend -typecheck %s -I %t/binary -module-name Bar
// RUN: %target-language-frontend -typecheck %s -I %t/binary -module-name FooBar
// RUN: %target-typecheck-verify-language -I %t/binary -module-name Blocked
// RUN: %target-typecheck-verify-language -I %t/textual -module-name Blocked -module-cache-path %t/module-cache

#if FOO

public fn foo() {}

#else

import Foo // expected-error {{module 'Foo' doesn't allow importation from module 'Blocked'}}

fn bar() { foo() }

#endif
